--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,7 @@
   <meta name="format-detection" content="telephone=no"/>
   <meta name="msapplication-tap-highlight" content="no"/>
   <meta name="viewport" content="initial-scale=1,width=device-width,viewport-fit=cover"/>
-  <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; media-src *; img-src 'self' data: blob: filesystem: content: cdvfile: *;">
+  <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; connect-src *; media-src 'self' data: blob: filesystem: content: cdvfile: *; img-src 'self' data: blob: filesystem: content: cdvfile: *;">
   <link rel="stylesheet" href="src/toast.css"/>
   <link rel="stylesheet" href="src/pull-refresh.css"/>
   <link rel="stylesheet" href="index.css"/>
