add wake on lan

--- a/www/index.html
+++ b/www/index.html
@@ -52,7 +52,7 @@
     <div @click="onSaveText"><i class="save"></i></div>
   </header>
   <main>
-    <pre contenteditable="true"></pre>
+    <pre class="content" contenteditable="true"></pre>
   </main>
 </div>
 
@@ -81,7 +81,7 @@
     </div>
     <div class="item">
       <div>MAC地址：</div>
-      <input model="server.mac" placeholder="可选" />
+      <input model="server.mac" placeholder="FF:FF:FF:FF:FF:FF" />
     </div>
   </main>
 </div>
