input type password

--- a/www/index.html
+++ b/www/index.html
@@ -77,7 +77,7 @@
     </div>
     <div class="item">
       <div>密码：</div>
-      <input type="text" model="server.password" placeholder="可选" type="password" />
+      <input type="password" model="server.password" placeholder="可选" type="password" />
     </div>
     <div class="item">
       <div>MAC地址：</div>
