--- a/www/index.html
+++ b/www/index.html
@@ -14,6 +14,7 @@
   <script src="src/que.js"></script>
   <script src="src/toast.min.js"></script>
   <script src="src/pull-refresh.js"></script>
+  <script src="src/pinch-zoom.js"></script>
   <script src="index.js"></script>
   <title>SMBOVA</title>
 </head>
@@ -40,8 +41,6 @@
       <div>{{ item.host || formatSize(item.size) }}</div>
       <div>{{ formatTime(item.lastModified) }}</div>
     </div>
-
-    <div class="image-page"></div>
   </div>
 </main>
 
@@ -54,6 +53,10 @@
   <main>
     <pre class="content" contenteditable="true"></pre>
   </main>
+</div>
+
+<div class="image-page">
+  <img/>
 </div>
 
 <div class="server-page">
