--- a/www/index.html
+++ b/www/index.html
@@ -22,6 +22,7 @@
 <header>
   <div @click="onBack"><i class="back"></i></div>
   <div @click="onStatusTop" class="appname">SMBOVA</div>
+  <div class="transfer-progress">{{ progress }}</div>
   <div @click="onAdd"><i class="add"></i></div>
   <div @click="onSort"><i class="sort"></i></div>
 </header>
@@ -30,14 +31,14 @@
   <div class="item" foreach="(item, index) in filelist" data-index="{{ index }}"
     @click="onOpen" @hammer.press="onAction">
 
-    <img class="icon" if="item.type==0" data-src="image/file/{{getFileIcon(item.name)}}.png"/>
+    <img class="icon" if="item.type==0" data-src="image/file/{{getFileIcon(item.ext)}}.png"/>
     <img class="icon" if="item.type==1" src="image/file/folder.png"/>
     <img class="icon" if="item.type==4" src="image/file/server.png"/>
     <img class="icon" if="item.type==8" src="image/file/share.png"/>
     <div class="filename">{{ item.name }}</div>
 
     <div class="metadata">
-      <div>{{ item.host || formatSize(item.size) }} {{ extname(item.name).toUpperCase() }}</div>
+      <div>{{ item.host || formatSize(item.size) }} {{ (item.ext || "").toUpperCase() }}</div>
       <div>{{ formatTime(item.lastModified) }}</div>
     </div>
   </div>
