文本查看器语法高亮

--- a/www/index.html
+++ b/www/index.html
@@ -8,12 +8,14 @@
   <meta http-equiv="Content-Security-Policy" content="default-src * 'self' 'unsafe-eval' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; connect-src *; media-src 'self' data: blob: filesystem: content: cdvfile: *; img-src 'self' data: blob: filesystem: content: cdvfile: *;">
   <link rel="stylesheet" href="src/toast.min.css"/>
   <link rel="stylesheet" href="src/pull-refresh.css"/>
+  <link rel="stylesheet" href="src/prism.css"/>
   <link rel="stylesheet" href="index.css"/>
   <script src="cordova.js"></script>
   <script src="src/hammer.js"></script>
   <script src="src/que.js"></script>
   <script src="src/toast.min.js"></script>
   <script src="src/pull-refresh.js"></script>
+  <script src="src/prism.js"></script>
   <script src="index.js"></script>
   <title>SMBOVA</title>
 </head>
