--- a/www/index.html
+++ b/www/index.html
@@ -11,11 +11,11 @@
   <link rel="stylesheet" href="src/prism.css"/>
   <link rel="stylesheet" href="index.css"/>
   <script src="cordova.js"></script>
-  <script src="src/hammer.js"></script>
-  <script src="src/que.js"></script>
+  <script src="src/que.min.js"></script>
   <script src="src/toast.min.js"></script>
-  <script src="src/pull-refresh.js"></script>
+  <script src="src/hammer.js"></script>
   <script src="src/prism.js"></script>
+  <script src="src/pull-refresh.js"></script>
   <script src="index.js"></script>
   <title>SMBOVA</title>
 </head>
