add wake on lan port

--- a/www/index.html
+++ b/www/index.html
@@ -89,6 +89,10 @@
       <input type="text" model="server.mac" placeholder="FF:FF:FF:FF:FF:FF" />
     </div>
     <div class="item">
+      <div>端口：</div>
+      <input type="text" model="server.port" placeholder="9" />
+    </div>
+    <div class="item">
       <div>指纹登录：</div>
       <input type="checkbox" class="toast-switch" id="needFingerprint" />
     </div>
